<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_1"
    tools:context=".GroceryList.GroceryActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_add"
        app:background="@color/black_shade_1"
        app:backgroundTint="@color/black_shade_2"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/grocery_polls_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <Button
        android:id="@+id/grocery_polls_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="polls"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/grocery_chores_btn" />

    <Button
        android:id="@+id/grocery_chores_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Chores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/grocery_polls_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/grocery_grocery_btn" />

    <Button
        android:id="@+id/grocery_grocery_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Grocery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/grocery_chores_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>