<resources>
    <string name="app_name">House Share</string>
    <string name="enter_poll_name">Enter Poll Name</string>
    <string name="enter_option">Enter Option</string>
    <string name="enter_option_2">Enter Option 2</string>
    <string name="enter_option_3">Enter Option 3</string>
    <string name="enter_poll_image_link">Enter poll Image Link</string>
    <string name="enter_poll_description">Enter poll Description</string>
    <string name="add_your_poll">Add Your poll</string>
    <string name="option_1">Option 1</string>
    <string name="vote">Vote</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="grocery_text">Groceries</string>
    <string name="chores_text">Chores</string>
    <string name="poll_text">Polls</string>
    <string-array name="prioritySpinner">
        <item>ASAP</item>
        <item>Today</item>
        <item>Tomorrow</item>
        <item>2 Days from now</item>
        <item>3 days from now</item>
        <item>More than 3 days</item>
    </string-array>

</resources>